--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 streamlit==1.37.1
-opencv-python==4.10.0.82
+opencv-python-headless==4.10.0.82   # <-- use *-headless*
 pillow==10.4.0
 numpy==1.26.4
